# c-programming

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.cmake  build.ps1  build.sh  setup_linux.sh  setup_windows.ps1
cmake/: asm_gen.cmake
gcc/: likely.c
memory/: struct_padding.c
type/: format_string.c
